--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -1,4 +1,6 @@
-<a href=/>RBF-Shadowhunter Home Page</a>
+{% for page in site.pages %}
+    <a href=/>RBF-Shadowhunter Home Page</a>
+{% endfor %}
 
 {{ content }}
 
